[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/Buttons/Menu_Pause/Note.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/Menu_Pause/Menu_pause.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Pause_Menu2.gd" type="Script" id=3]
[ext_resource path="res://Ttf/07x5-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Buttons/PauseMenu/Button1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/PauseMenu/Button2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Bestrecords.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Tutorial1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/forshoplvl/close_button2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/forshoplvl/close_button1.png" type="Texture" id=10]
[ext_resource path="res://Music/Button1.wav" type="AudioStream" id=11]
[ext_resource path="res://Music/Button2.wav" type="AudioStream" id=12]
[ext_resource path="res://Sprites/Buttons/Menu_Pause/NoteStop.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Buttons/Menu_Pause/Note1.png" type="Texture" id=14]
[ext_resource path="res://Scenes/OptionsPause.tscn" type="PackedScene" id=15]
[ext_resource path="res://Ttf/pixel-unicode-regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Scenes/Tutorialrus.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/OptionsPauserus.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 37
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 46
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 34
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 55
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=12]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 46
font_data = ExtResource( 16 )

[node name="Pause_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Labelrus" type="Label" parent="."]
visible = false
margin_left = -143.245
margin_top = -304.437
margin_right = 206.755
margin_bottom = -122.437
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.376471, 0.25098, 0.25098, 1 )
text = "ПАУЗА"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -154.296
margin_top = -268.009
margin_right = 220.704
margin_bottom = -168.009
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.376471, 0.25098, 0.25098, 1 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 23.0764, 371.486 )
scale = Vector2( 0.734317, 0.56442 )
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="."]
margin_left = -98.1298
margin_top = 317.63
margin_right = 175.87
margin_bottom = 344.63
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "The best record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -27.1562
margin_top = 357.838
margin_right = 64.8438
margin_bottom = 422.838
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0156863, 0, 0, 1 )
text = "
Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 3.94385
margin_top = 349.425
margin_right = 73.9438
margin_bottom = 395.425
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Sprite" parent="."]
position = Vector2( 252, 237 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="NoteStop" type="Sprite" parent="."]
visible = false
position = Vector2( 252, 227 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 13 )

[node name="Button4" type="TouchScreenButton" parent="."]
position = Vector2( -99, -156 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="Button4"]
margin_left = 41.9528
margin_top = 29.9662
margin_right = 233.953
margin_bottom = 71.9662
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelrus" type="Label" parent="Button4"]
visible = false
margin_left = 23.5968
margin_top = 21.7091
margin_right = 287.597
margin_bottom = 89.7091
custom_fonts/font = SubResource( 7 )
text = "ПРОДОЛЖИТЬ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="TouchScreenButton" parent="."]
position = Vector2( -99, -46 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="Button5"]
margin_left = 70.6393
margin_top = 15.0803
margin_right = 180.639
margin_bottom = 90.0803
custom_fonts/font = SubResource( 8 )
text = " EXIT
SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button5"]
margin_left = 182.634
margin_top = 34.7451
margin_right = 222.634
margin_bottom = 66.7451
custom_fonts/font = SubResource( 9 )
text = "&"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelrus" type="Label" parent="Button5"]
visible = false
margin_left = 68.3519
margin_top = 4.71945
margin_right = 332.352
margin_bottom = 113.719
custom_fonts/font = SubResource( 7 )
text = "ВЫЙТИ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2rus" type="Label" parent="Button5"]
visible = false
margin_left = 35.8672
margin_top = 36.8112
margin_right = 299.867
margin_bottom = 145.811
custom_fonts/font = SubResource( 7 )
text = "СОХРАНИТЬ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3rus" type="Label" parent="Button5"]
visible = false
margin_left = 194.438
margin_top = 16.0459
margin_right = 458.438
margin_bottom = 125.046
custom_fonts/font = SubResource( 7 )
text = "&"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TouchScreenButton" parent="."]
position = Vector2( -97, 61 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label9" type="Label" parent="Button2"]
margin_left = 38.4845
margin_top = 32.6032
margin_right = 210.484
margin_bottom = 66.6032
custom_fonts/font = SubResource( 10 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9rus" type="Label" parent="Button2"]
visible = false
margin_left = 21.709
margin_top = 18.8775
margin_right = 235.709
margin_bottom = 85.8775
custom_fonts/font = SubResource( 11 )
text = "НАСТРОЙКИ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TouchScreenButton" parent="."]
position = Vector2( -99, 169 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label10" type="Label" parent="Button3"]
margin_left = 21.2576
margin_top = 37.2901
margin_right = 233.258
margin_bottom = 66.2901
custom_fonts/font = SubResource( 12 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10rus" type="Label" parent="Button3"]
visible = false
margin_left = 20.7653
margin_top = 22.653
margin_right = 233.765
margin_bottom = 78.653
custom_fonts/font = SubResource( 13 )
text = "РУКОВОДСТВО"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial2" parent="." instance=ExtResource( 17 )]
visible = false
margin_left = -1261.29
margin_top = -758.414
margin_right = -1261.29
margin_bottom = -758.414

[node name="Tutorial1" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = -1261.29
margin_top = -758.414
margin_right = -1261.29
margin_bottom = -758.414

[node name="Close" type="TouchScreenButton" parent="."]
pause_mode = 2
visible = false
position = Vector2( 525.057, -680.311 )
scale = Vector2( 0.993685, 0.976529 )
z_index = 6
normal = ExtResource( 10 )
pressed = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Music" type="TouchScreenButton" parent="."]
position = Vector2( 206.314, 193.33 )
scale = Vector2( 0.124066, 0.119313 )
normal = ExtResource( 14 )
pressed = ExtResource( 14 )

[node name="Options2" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( -1222.62, -715.072 )

[node name="Options" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( -1222.62, -715.072 )

[node name="Close2" type="TouchScreenButton" parent="."]
pause_mode = 2
visible = false
position = Vector2( 700.868, -536.224 )
scale = Vector2( 1.44085, 1.39819 )
z_index = 6
normal = ExtResource( 10 )
pressed = ExtResource( 9 )

[connection signal="released" from="Button4" to="." method="_on_Button4_released"]
[connection signal="released" from="Button5" to="." method="_on_Button5_released"]
[connection signal="released" from="Button2" to="." method="_on_Button2_released"]
[connection signal="released" from="Button3" to="." method="_on_Button3_released"]
[connection signal="released" from="Close" to="." method="_on_Close_released"]
[connection signal="released" from="Music" to="." method="_on_Music_released"]
[connection signal="released" from="Close2" to="." method="_on_Close2_released"]
